--- a/src/scss/config/variables.scss
+++ b/src/scss/config/variables.scss
@@ -1,4 +1,8 @@
 :root {
+  --color-white: #ffffff;
+  --color-pink: #ff52c1;
+  --color-black: #00252e;
+  --color-grey: #808e9a;
 }
 
 /* Variables SASS */
