--- a/src/scss/blocks/titles.scss
+++ b/src/scss/blocks/titles.scss
@@ -1,1 +1,22 @@
-
+.title{
+    font-family: "Poppins", sans-serif;
+    line-height: 2.25rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+    margin: 0;
+}
+.title--s{
+    font-size: 1.25rem;
+    line-height: 1.875rem;
+}
+.title--xl{
+    line-height: 2.25rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+.title--xs{
+    font-family: "Open Sans", sans-serif;
+    font-size: 1.25rem;
+    line-height: 1.875rem;
+    font-weight: 700;
+}
