--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,8 @@
 @use 'base/normalize.scss';
 @use 'base/initial-reset.scss';
 @use 'config/variables.scss';
+@use 'blocks/texts.scss';
+@use 'blocks/titles.scss';
 @use 'blocks/body.scss';
+@use 'blocks/header.scss';
+@use 'blocks/logo.scss';
