--- a/src/scss/blocks/body.scss
+++ b/src/scss/blocks/body.scss
@@ -2,8 +2,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   background-color: white;
-  font-family: sans-serif;
   color: var(--color-black);
 }
