--- a/src/scss/blocks/titles.scss
+++ b/src/scss/blocks/titles.scss
@@ -1,22 +1,42 @@
-.title{
-    font-family: "Poppins", sans-serif;
+@use '../mixins/responsive.scss' as *;
+.title {
+  font-family: 'Poppins', sans-serif;
+  line-height: 2.25rem;
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin: 0;
+  @include responsive(desktop) {
+    line-height: 4.5rem;
+    font-size: 3rem;
+  }
+}
+.title--s {
+  font-size: 1.25rem;
+  line-height: 1.875rem;
+  margin-bottom: 1rem;
+  @include responsive(desktop) {
+    font-size: 2.5rem;
+    line-height: 3.75rem;
+    margin-bottom: 1.625rem;
+  }
+}
+.title--xl {
+  line-height: 2.25rem;
+  font-size: 1.5rem;
+  font-weight: 700;
+  @include responsive(desktop) {
+    line-height: 4.5rem;
+    font-size: 3rem;
+  }
+}
+.title--xs {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.25rem;
+  line-height: 1.875rem;
+  font-weight: 700;
+  color: var(--color-white);
+  @include responsive(desktop) {
     line-height: 2.25rem;
     font-size: 1.5rem;
-    font-weight: 700;
-    margin: 0;
-}
-.title--s{
-    font-size: 1.25rem;
-    line-height: 1.875rem;
-}
-.title--xl{
-    line-height: 2.25rem;
-    font-size: 1.5rem;
-    font-weight: 700;
-}
-.title--xs{
-    font-family: "Open Sans", sans-serif;
-    font-size: 1.25rem;
-    line-height: 1.875rem;
-    font-weight: 700;
+  }
 }
