--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,4 +5,8 @@
 @use 'blocks/titles.scss';
 @use 'blocks/body.scss';
 @use 'blocks/header.scss';
+@use 'blocks/main.scss';
 @use 'blocks/logo.scss';
+@use 'blocks/button.scss';
+@use 'blocks/info.scss';
+@use 'blocks/article.scss';
