--- a/src/scss/blocks/titles.scss
+++ b/src/scss/blocks/titles.scss
@@ -24,6 +24,7 @@
   line-height: 2.25rem;
   font-size: 1.5rem;
   font-weight: 700;
+  margin-bottom: 2.5rem;
   @include responsive(desktop) {
     line-height: 4.5rem;
     font-size: 3rem;
@@ -35,6 +36,7 @@
   line-height: 1.875rem;
   font-weight: 700;
   color: var(--color-white);
+  margin-bottom: 16px;
   @include responsive(desktop) {
     line-height: 2.25rem;
     font-size: 1.5rem;
