--- a/src/scss/config/variables.scss
+++ b/src/scss/config/variables.scss
@@ -1,9 +1,11 @@
 :root {
   --color-white: #ffffff;
   --color-pink: #ff52c1;
+  --color-hover:#FF8ED7;
   --color-black: #00252e;
   --color-grey: #808e9a;
   --color-blue: #f6fbff;
+  --color-darkblue: #00C7FA;
 }
 
 /* Variables SASS */
