--- a/src/scss/blocks/button.scss
+++ b/src/scss/blocks/button.scss
@@ -1,4 +1,5 @@
 @use '../mixins/responsive.scss' as *;
+@use '../mixins/hover.scss' as *;
 .button--pink {
   border-radius: 1.25rem;
   background-color: var(--color-pink);
@@ -13,6 +14,9 @@
     line-height: 1.875rem;
     padding: 25px 99px 25px 100px;
   }
+  @include hover{
+    background-color: var(--color-hover);
+  }
 }
 
 .button--rectangle {
@@ -24,6 +28,9 @@
   line-height: 24px;
   padding: 12px 41px 12px 41px;
   border: none;
+  @include hover{
+    background-color: var(--color-hover);
+  }
 }
 
 .button--ghost {
@@ -36,5 +43,9 @@
     border-radius: 1.25rem;
     font-size: 1rem;
     padding: 9px 30px 9px 31px;
+  }
+  @include hover{
+    color: var(--color-hover);
+    border: 0.0369rem solid var(--color-hover);
   }
 }
