--- a/src/scss/blocks/social-media.scss
+++ b/src/scss/blocks/social-media.scss
@@ -1,4 +1,11 @@
+@use '../mixins/hover.scss' as *;
 .social-media {
   display: flex;
   gap: 17.33px;
+
+}
+.sm-icon{
+  @include hover{
+    background-color: var(--color-darkblue);
+  }
 }
