--- a/src/scss/blocks/texts.scss
+++ b/src/scss/blocks/texts.scss
@@ -35,6 +35,7 @@
   margin-bottom: 32px;
   @include responsive(desktop) {
     margin-bottom: 40px;
+    font-size: 0.875rem;
   }
 }
 .text--white {
